[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "m3u8>=6.0.0",
    "pyinstaller>=6.16.0",
    "pysimplegui>=5.0.8.3",
    "requests>=2.32.5",
    "pycryptodome>=3.20.0",
]
